# appshots-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml
examples/: template-with-frame.typ
src/: error.rs  lib.rs  main.rs  prompts.rs  server.rs
src/io/: fs.rs  memory.rs  mod.rs
src/model/: color.rs  config.rs  device.rs  locale.rs  mod.rs  template.rs
src/model/snapshots/: appshots_mcp__model__config__tests__project_config_full.snap  appshots_mcp__model__template__tests__template_config_full.snap
src/service/: config_parser.rs  font_resolver.rs  keyword_matcher.rs  locale.rs  metadata_parser.rs  mod.rs  plist_builder.rs  template_resolver.rs  typst_renderer.rs  typst_world.rs  validator.rs
src/tools/: analyze.rs  captions.rs  capture.rs  deliver.rs  design.rs  glossary.rs  interact.rs  mod.rs  plan.rs  render.rs  scan.rs  seed.rs  validate.rs  warm.rs
