[package]
name = "appshots-mcp"
version = "0.2.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
description = "MCP server for generating ASO-optimized App Store screenshots"
repository = "https://github.com/nicklama/appshots-mcp"
keywords = ["mcp", "aso", "screenshots", "app-store", "typst"]
categories = ["development-tools", "multimedia::images"]
readme = "README.md"

[lib]
name = "appshots_mcp"
path = "src/lib.rs"

[[bin]]
name = "appshots-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt", "macros", "io-std", "sync", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
schemars = { version = "1.0", features = ["indexmap2"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.6", features = ["derive"] }
libc = "0.2"
typst = "0.14"
typst-render = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
insta = { version = "1", features = ["json"] }
tokio-test = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
